<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"

    tools:context="team.cont.tvassistant.LoginActivity">


    <ProgressBar
        android:id="@+id/progressBar"
        style="@android:style/Widget.DeviceDefault.Light.ProgressBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:visibility="gone" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/imageView"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="20dp"
                    android:layout_weight="1"
                    android:contextClickable="false"
                    android:foregroundGravity="center_horizontal|center"
                    app:srcCompat="@drawable/logo" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="25dp"
                android:layout_weight="1"
                android:orientation="vertical">

                <EditText
                    android:id="@+id/login_e"
                    style="@style/Widget.AppCompat.Light.AutoCompleteTextView"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_marginLeft="35dp"
                    android:layout_marginRight="35dp"
                    android:background="@android:color/background_light"
                    android:ems="10"
                    android:hint="@string/login"
                    android:inputType="textEmailAddress"
                    android:paddingLeft="15dp"
                    tools:layout_editor_absoluteX="8dp"
                    tools:layout_editor_absoluteY="281dp" />

                <android.support.constraint.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                </android.support.constraint.ConstraintLayout>

                <EditText
                    android:id="@+id/email_e"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_marginLeft="35dp"
                    android:layout_marginRight="35dp"
                    android:layout_marginTop="10dp"
                    android:layout_weight="1"
                    android:background="@android:color/background_light"
                    android:ems="10"
                    android:hint="@string/email"
                    android:inputType="textEmailAddress"
                    android:paddingLeft="15dp" />

                <EditText
                    android:id="@+id/password_e"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_marginLeft="35dp"
                    android:layout_marginRight="35dp"
                    android:layout_marginTop="10dp"
                    android:layout_weight="1"
                    android:background="@android:color/background_light"
                    android:ems="10"
                    android:hint="@string/password"
                    android:inputType="textPassword"
                    android:paddingLeft="15dp" />

                <EditText
                    android:id="@+id/password_e2"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_marginLeft="35dp"
                    android:layout_marginRight="35dp"
                    android:layout_marginTop="10dp"
                    android:layout_weight="1"
                    android:background="@android:color/background_light"
                    android:ems="10"
                    android:hint="@string/repeat_passowrd"
                    android:inputType="textPassword"
                    android:paddingLeft="15dp" />

                <Button
                    android:id="@+id/createb"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="55dp"
                    android:layout_marginRight="55dp"
                    android:layout_marginTop="90dp"
                    android:onClick="createUser"
                    android:text="@string/create"
                    android:background="@drawable/roundcorner"
                    android:textAllCaps="false" />

            </LinearLayout>

        </LinearLayout>

    </ScrollView>

</LinearLayout>