<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"

    tools:context="team.cont.tvassistant.LoginActivity">


    <ProgressBar
        android:id="@+id/progressBar2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical|center_horizontal"
        android:layout_weight="0.00"
        android:visibility="gone" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/imageView"
                    android:layout_width="match_parent"
                    android:layout_height="168dp"
                    android:layout_marginTop="20dp"
                    android:contextClickable="false"
                    android:foregroundGravity="center_horizontal|center"
                    app:srcCompat="@drawable/logo" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical">

                <EditText
                    android:id="@+id/email_log"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginLeft="35dp"
                    android:layout_marginRight="35dp"
                    android:layout_marginTop="25dp"
                    android:layout_weight="0.15"
                    android:background="@android:color/background_light"
                    android:ems="10"
                    android:hint="@string/email"
                    android:inputType="textEmailAddress"
                    android:paddingLeft="15dp" />

                <EditText
                    android:id="@+id/passwordE"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginLeft="35dp"
                    android:layout_marginRight="35dp"
                    android:layout_marginTop="25dp"
                    android:layout_weight="1"
                    android:background="@android:color/background_light"
                    android:ems="10"
                    android:hint="@string/password"
                    android:inputType="textPassword"
                    android:paddingLeft="15dp" />

                <Button
                    android:id="@+id/loginb"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp"
                    android:layout_marginLeft="75dp"
                    android:layout_marginRight="75dp"
                    android:layout_marginTop="40dp"
                    android:background="@drawable/round_log"
                    android:onClick="LoginOn"
                    android:text="@string/login"
                    android:textAllCaps="false" />

                <Button
                    android:id="@+id/registrationb"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="40dp"
                    android:layout_marginLeft="75dp"
                    android:layout_marginRight="75dp"
                    android:background="@drawable/round_reg"
                    android:onClick="goRegistrationActivity"
                    android:text="@string/registration"
                    android:textAllCaps="false" />

                <TextView
                    android:id="@+id/textView12"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.15"
                    android:gravity="center_horizontal"
                    android:text="Забули ппароль?"
                    android:textColor="@android:color/holo_blue_dark" />

            </LinearLayout>

        </LinearLayout>

    </ScrollView>
</LinearLayout>